<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <Button
        android:id="@+id/settings_btn_show_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_show_qr_code"
        android:layout_marginBottom="@dimen/settings_spacing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/settings_spacing">

        <TextView
            android:id="@+id/settings_txt_codeLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:textColor="@color/colorBlack"
            android:text="@string/settings_codeLength" />

        <EditText
            android:id="@+id/settings_inp_codeLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_spacing"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_txt_timer_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:text="@string/settings_timer_duration" />

        <EditText
            android:id="@+id/settings_inp_timer_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_spacing">

        <Switch
            android:id="@+id/settings_sw_timer_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_timer_sound" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/settings_spacing">

        <Switch
            android:id="@+id/settings_sw_explosion_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_explosion_sound" />
    </FrameLayout>

</LinearLayout>